# DNFMinimizer

./: Button.h  CMakeLists.txt  README.md  Screen.h  Table.cpp  Table.h  TextBox.cpp  TextLabel.h  main.cpp
